--- a/Binding_Lab/Tabs/TwoWaysBindingTab.xaml
+++ b/Binding_Lab/Tabs/TwoWaysBindingTab.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Binding_Lab.Tabs"
+             xmlns:vm="clr-namespace:Binding_Lab.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="600">
     <Grid Margin="10">
@@ -21,7 +22,7 @@
 
         <Label Grid.Row="0" Grid.Column="0" Content="Двухсторонняя привязка TextBox:"/>
         <TextBox Grid.Row="0" Grid.Column="1" x:Name="TwoWayTextBox" 
-                 Text="{Binding TwoWayText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                 Text="{Binding TwoWayText, Mode=TwoWay}" 
                  Margin="5"/>
 
         <Label Grid.Row="1" Grid.Column="0" Content="Slider (TwoWay):"/>
