--- a/Binding_Lab/Tabs/OneWayBindingTab.xaml
+++ b/Binding_Lab/Tabs/OneWayBindingTab.xaml
@@ -6,43 +6,28 @@
              xmlns:local="clr-namespace:Binding_Lab.Tabs"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+    <UniformGrid Rows="2" Columns="4" 
+        Margin="10">
+        <!-- OneWay TextBox 1 -->
+        <Label Content="OneWay TextBox 1:" Margin="0,0,3,15" VerticalAlignment="Top"/>
+        <TextBox x:Name="OneTimeTextBox1" 
+                 Text="{Binding SourceText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                 Margin="5,0,5,0" VerticalAlignment="Top"/>
 
-        <Label Grid.Row="0" Grid.Column="0" Content="Source TextBox (TwoWay):"/>
-        <TextBox Grid.Row="0" Grid.Column="1" x:Name="SourceTextBox" 
-                 Text="{Binding SourceText, Mode=TwoWay}" Margin="5"/>
+        <!-- Log TextBox 1 -->
+        <Label Content="Log TextBox 1:" Margin="22,0,0,15" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding SourceText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" 
+                   Margin="5,0,5,0" VerticalAlignment="Top"/>
 
-        <Label Grid.Row="1" Grid.Column="0" Content="OneWay TextBox:"/>
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="OneWayTextBox" 
-                 Text="{Binding SourceText, Mode=OneWay}" 
-                 IsReadOnly="True" Margin="5" Background="LightGray"/>
+        <!-- TwoWay SliderNumber -->
+        <Label Content="OneTime Operation:" Margin="0,15,3,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="OnlyNumber" Text="{Binding SourceValue, UpdateSourceTrigger=PropertyChanged}" 
+                 Margin="5,15,5,0" VerticalAlignment="Top"/>
 
-        <Label Grid.Row="2" Grid.Column="0" Content="OneWay Slider:"/>
-        <Slider Grid.Row="2" Grid.Column="1" x:Name="OneWaySlider"
-                Minimum="0" Maximum="100" Value="{Binding SourceValue, Mode=OneWay}"
-                IsEnabled="False" Margin="5"/>
-
-        <Label Grid.Row="3" Grid.Column="0" Content="Calculated Text:"/>
-        <TextBox Grid.Row="3" Grid.Column="1" x:Name="CalculatedTextBox" 
-                 Text="{Binding DisplayText, Mode=OneWay}" 
-                 IsReadOnly="True" Margin="5" Background="LightGray"/>
-
-        <TextBlock Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5"
-                   TextWrapping="Wrap" TextAlignment="Center">
-            <Run Text="OneWay: только из VM в UI"/><LineBreak/>
-            <Run Text="Изменения в UI не передаются в VM"/><LineBreak/>
-            <Run Text="Полезно для read-only отображения"/>
-        </TextBlock>
-    </Grid>
+        <!-- Log Operation -->
+        <Label Content="Square Number:" Margin="22,15,0,0" VerticalAlignment="Top"/>
+        <Slider Minimum="0" Maximum="100" 
+                Value="{Binding SourceValue, Mode=OneWay}" 
+                Margin="5,15,5,0" VerticalAlignment="Top"/>
+    </UniformGrid>
 </UserControl>
