--- a/Binding_Lab/Tabs/TwoWaysBindingTab.xaml
+++ b/Binding_Lab/Tabs/TwoWaysBindingTab.xaml
@@ -20,10 +20,10 @@
         <Label Content="Log TwoWayCheckBox:"/>
         <CheckBox IsChecked="{Binding TwoWayFlag}" Content="I`m checked?" Margin="5" VerticalAlignment="Top"/>
         
-        <!-- Привязка  ProgressBar (TwoWay)-->
-        <Label Content="TwoWay ProgressBar:"/>
+        <!-- Привязка Slider (TwoWay)-->
+        <Label Content="TwoWay Slider:"/>
         <TextBox Text="{Binding TwoWayValue, UpdateSourceTrigger=PropertyChanged}" Margin="5" VerticalAlignment="Top"/>
-        <Label Content="DefaultProgressBar:"/>
-        <ProgressBar x:Name="DefaultProgressBar" Value="{Binding TwoWayValue, UpdateSourceTrigger=PropertyChanged}" Height="20" Margin="5" VerticalAlignment="Top"/>
+        <Label Content="Slider:"/>
+        <Slider Value="{Binding TwoWayValue, UpdateSourceTrigger=PropertyChanged}" Height="20" Margin="5" VerticalAlignment="Top" Maximum="100"/>
     </UniformGrid>
 </UserControl>
