--- a/Binding_Lab/App.xaml
+++ b/Binding_Lab/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Binding_Lab"
+             xmlns:translation="clr-namespace:CodingSeb.Localization.WPF;assembly=CodingSeb.Localization.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
